--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   font-family: "Lobster", cursive;
   overflow: hidden;
   margin: 0;
+  padding: 0;
   background: #111;
   height: 100vh;
   display: flex;
@@ -18,13 +19,13 @@ body {
 .container {
   width: 100%;
   display: flex;
-  padding: 0 20px;
+  padding: 0 10px;
 }
 
 .slide {
   height: 80vh;
   border-radius: 20px;
-  margin: 10px;
+  margin: 5px;
   cursor: pointer;
   color: rgb(0, 0, 4);
   flex: 1;
